# QuickQuick

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vite.config.ts
.github/: release-install-guide.md
.github/workflows/: release.yml
docs/: QuickQuick-设计文档.html  QuickQuick-设计文档.md  STRATEGY.html  STRATEGY.md
docs/design/: auto-update.html  auto-update.md  dock-icon-accessory.html  dock-icon-accessory.md  local-keystore-no-keychain.html  local-keystore-no-keychain.md  quickquick-richtext-fidelity.html  quickquick-richtext-fidelity.md  translate-source-interaction.html  translation-sources-pot.html  translation-sources-pot.md
docs/dev-log/: hints.md  pending-manual.yaml  retrospective-post-v3.md  retrospective-v4.md
docs/dev-log/fix-paste-banner-layout/: review.md
docs/dev-log/image-copy-paste/: review.md
docs/dev-log/keystore-local/: coding.md  review.md  test.md
docs/dev-log/refactor-action-bar/: review.md
docs/dev-log/richtext-v1/: acceptance.yaml  retrospective.md  version-verdict.md
docs/dev-log/translate-v1/: acceptance.yaml  retrospective.md  version-verdict.md
docs/dev-log/translate-v2/: acceptance.yaml  retrospective.md  version-verdict.md
docs/dev-log/translate-v3/: acceptance.yaml  retrospective.md  version-verdict.md
docs/dev-log/translate-v4/: acceptance.yaml  retrospective.md  version-verdict.md
docs/dev-log/v0/: acceptance.yaml  version-verdict.md
docs/dev-log/v1/: acceptance.yaml  version-verdict.md
docs/dev-log/v2/: acceptance.yaml  version-verdict.md
docs/dev-log/v3/: acceptance.yaml  version-verdict.md
docs/dev-log/v4/: acceptance.yaml  (+1 more)
scripts/: freeze-lint.sh  freeze-lint.test.sh  release.sh  release.test.sh
src/: App.tsx  app-shell.test.tsx  smoke.test.ts  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  db.rs  frontmost.rs  hotkey.rs  image.rs  keyprovider.rs  lib.rs  macos_paste.rs  main.rs  onboarding.rs  paste.rs  pipeline.rs  popover.rs  portable.rs  privacy.rs  settings.rs  tray.rs  window_pos.rs  windows_paste.rs
src-tauri/src/ipc/: clipboard.rs  mod.rs  settings.rs  system.rs  translate.rs  update.rs
src-tauri/src/translate/: cache.rs  cancel.rs  credential.rs  ecdict_db.rs  error.rs  history.rs  lang.rs  mod.rs  providers.rs  retry.rs
src-tauri/tests/: activation_policy.rs  autostart.rs  boot_pipeline.rs  boot_smoke.rs  capture_image.rs  clipboard.rs  config_dir_isolation_test.rs  db.rs  frontmost_logic_test.rs  hotkey.rs  image.rs  ipc_clipboard.rs  ipc_open_settings.rs  ipc_settings.rs  ipc_translate.rs  ipc_validation.rs  keyprovider.rs  macos_backends.rs  onboarding.rs  paste.rs  portable.rs  privacy.rs  provider_secret.rs  providers.rs  richtext_capture.rs  richtext_paste_copy.rs  richtext_storage.rs  schema.rs  secret_presence.rs  single_instance.rs  traffic_light.rs  translate.rs  translate_response_refactor.rs  update_watcher.rs
src-tauri/tools/: gen_ecdict_db.py  test_gen_ecdict_db.py
src/clip-popover/: ClipPopoverApp.events.test.tsx  ClipPopoverApp.tsx  PopoverFooter.tsx  PopoverList.test.tsx  PopoverList.tsx  PopoverPreview.test.tsx  PopoverPreview.tsx  clip-popover-actions.test.tsx  grouping.test.ts  grouping.ts  index.html  keyboard-nav.test.ts  keyboard-nav.ts  main.tsx  popover.css
src/components/: ActionBar.css  ActionBar.test.tsx  ActionBar.tsx  EmptyState.test.tsx  EmptyState.tsx  KindIcon.tsx  Select.css  Select.test.tsx  Select.tsx  UpdateBanner.css  UpdateBanner.test.tsx  UpdateBanner.tsx
src/ipc/: check-update.test.ts  credential-utils.test.ts  credential-utils.ts  events.ts  ipc-client.test.ts  ipc-client.ts  restart-app.test.ts
src/main-window/: main-nav.test.ts  nav.ts
src/shell/: AppShell.tsx  SideBar.tsx  ThemeSwitch.test.tsx  ThemeSwitch.tsx  TitleBar.test.tsx  TitleBar.tsx  capabilities.test.ts  windowRoute.test.ts  windowRoute.ts
src/theme/: base.css  components.css  design-tokens.test.ts  design-tokens.ts  theme.css  themeStore.test.ts  themeStore.ts  tokens.css  useTheme.test.ts  useTheme.ts
src/trans-popover/: MiniTranslate.test.tsx  MiniTranslate.tsx  TransPopoverApp.tsx  index.html  main.tsx  popover.css  retranslate.test.ts  retranslate.ts  source-text.test.ts  source-text.ts  trans-popover.test.tsx
src/translate/: select-trigger.test.ts  select-trigger.ts  translate-actions.test.ts  translate-actions.ts
(+430 files in other folders)
