[package]
name = "quickquick"
version = "0.0.1"
description = "QuickQuick - 剪贴板历史与翻译工具"
authors = ["QuickQuick"]
edition = "2021"

[[bin]]
name = "quickquick"
path = "src/main.rs"

[lib]
name = "quickquick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1" }
md5 = "0.7"
arboard = "3"
ureq = { version = "2", features = ["tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
webp = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSApplication", "NSResponder"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
