[package]
name = "quickquick"
version = "0.3.8"
description = "QuickQuick - 剪贴板历史与翻译工具"
authors = ["QuickQuick"]
edition = "2021"

[[bin]]
name = "quickquick"
path = "src/main.rs"

[lib]
name = "quickquick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
# tokio time 仅用于后台 update_watcher 的异步 sleep（轮询间隔/首检延迟）；
# tokio 已随 tauri 运行时传递依赖进来，此处仅显式启用 time 特性，不新增下载。
tokio = { version = "1", features = ["time"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1" }
md5 = "0.7"
# 有道翻译 signType=v3 签名为 SHA256（官方文档要求）；sha2 已作为 tauri 传递依赖在 lockfile 中，
# 此处显式声明以直接使用，不新增实际下载。
sha2 = "0.10"
# 腾讯云 TC3-HMAC-SHA256（三层密钥派生）与阿里云 HMAC-SHA1 签名需 HMAC 构造；
# hmac 提供通用 HMAC，配合 sha2(SHA256)/sha1(SHA1) 摘要算法。sha1 为阿里 HMAC-SHA1 所需。
hmac = "0.12"
sha1 = "0.10"
arboard = "3"
ureq = { version = "2", features = ["tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
webp = "0.3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSPasteboard",
    "NSApplication",
    "NSResponder",
    "NSWorkspace",
    "NSRunningApplication",
    # 红绿灯（交通灯）按钮重定位：需 NSWindow.standardWindowButton 取按钮，
    # NSView 的 frame/setFrameOrigin 移动；NSButton/NSControl 为按钮类型链。
    "NSWindow",
    "NSView",
    "NSControl",
    "NSButton",
] }
# NSWorkspace 通知中心走 block 形式注册观察者（addObserverForName:object:queue:usingBlock:），
# 需 objc2-foundation 提供 NSNotification/NSDictionary/NSString，block2 提供 RcBlock；
# NSGeometry 提供 NSPoint/NSRect 用于读写按钮 frame。
objc2-foundation = { version = "0.3", features = [
    "NSNotification",
    "NSDictionary",
    "NSString",
    "NSValue",
    "NSGeometry",
] }
block2 = "0.6"

# Windows 粘贴注入与前台捕获（Bug 修复：Windows 粘贴落空）。
# 版本对齐 Cargo.lock 已锁定的 windows-sys 0.61，避免新增下载。
# - KeyboardAndMouse：SendInput / VK_CONTROL / VK_V 合成 Ctrl+V
# - DataExchange：GetClipboardSequenceNumber 读剪贴板变化计数（对齐 macOS changeCount）
# - WindowsAndMessaging：GetForegroundWindow / SetForegroundWindow / GetWindowThreadProcessId
# - Foundation：HWND 等基础类型
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
